# rustys-corner-initial-mcp-workflow

./: .gitignore  README.md  data_sources.md  pyproject.toml  requirements.txt  tier1_plan_leagues.json
src/: Makefile  cli.py  competitions.py  data_loader.py  evaluate.py  features.py  fetch.py  fetch_apifootball.py  fetch_openfootball.py  fetch_thesportsdb.py  mcp_server.py  metrics.py  model_elo.py  model_ensemble.py  model_poisson.py  model_strength.py  performance.py  render.py
tests/: test_competitions.py  test_features.py  test_metrics.py  test_model_elo.py  test_model_ensemble.py  test_model_poisson.py  test_model_strength.py
