[project]
name = "pl-predictor"
version = "0.1.0"
description = "Premier League baseline predictions (rolling stats + Poisson)"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0,<3.0",
    "numpy>=1.24,<2.0",
    "requests>=2.28,<3.0",
    "matplotlib>=3.7,<4.0",
    "mcp>=1.0,<2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
